Assignment 01 ::: Executable ready